frontend/src/components/layout/app-bar/navbar.module.scss
/*
 * SPDX-FileCopyrightText: 2023 The HedgeDoc developers (see AUTHORS file)
 *
 * SPDX-License-Identifier: AGPL-3.0-only
 */

.side {
  flex: 1 1 0;
}

.center {
  display: flex;
  justify-content: center;
  flex: 2 1 0;
}

.history {
  flex: 2 2 0;
}

.navbar {
  height: 48px;
  background-color: #f0f2f4;
}

body[data-bs-theme='dark'] .navbar {
  background-color: #17191c;
}

@media (max-width: 767.98px) {
  .side {
    flex: 0 1 auto;
  }

  .center {
    flex: 1 1 0;
    padding-left: 0.25rem !important;
    padding-right: 0.25rem !important;
  }

  .navbar {
    padding-left: 0.25rem !important;
    padding-right: 0.25rem !important;
  }
}

